# crewtimer-recorder

./: .eslintrc.js  .gitattributes  .gitignore  README.md  package.json  tsconfig.json
.erb/configs/: webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
assets/: icon.icns
assets/icons/: make_icons.sh
doc/: AIDA COMMAND LIST FOR IP CAMERAS 2.23.2024.xlsx  AIDA VISCA Command List 3.4.25.xlsx  CrewTimer_MP4_Timestamp_Encoding_Spec.md
native/recorder/: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.d.ts  index.js  package.json
native/recorder/cmake/: FindNDI.cmake
native/recorder/scripts/: build-ffmpeg.sh
native/recorder/src/: BaslerReader.cpp  EventQueue.hpp  FFRecorder.cpp  FrameProcessor.cpp  FrameProcessor.hpp  Message.hpp  MessageShim.cpp  MulticastReceiver.cpp  MulticastReceiver.hpp  NdiReader.cpp  NullRecorder.cpp  OpenCVRecorder.cpp  RecorderAPI.cpp  SrtReader.cpp  SystemEventQueue.hpp  VideoController.hpp  VideoReader.hpp  VideoRecorder.hpp  VideoUtils.cpp  VideoUtils.hpp  appleRecorder.cpp  ctrecorder.cpp  util.cpp  util.hpp
native/recorder/src/event/: NativeEvent.cpp  NativeEvent.hpp
native/recorder/src/mdns/: ndi_mdns.cpp  ndi_mdns.hpp
native/recorder/src/opencv/: FocusScore.cpp  FocusScore.hpp
native/recorder/src/srt/: SrtReconnectingReader.hpp
native/recorder/src/visca/: IViscaTcpClient.hpp  ViscaTcpClient.cpp
release/app/: package.json
src/__tests__/: App.test.tsx
src/main/: main.ts  menu.ts  preload.ts
src/main/msgbus/: msgbus-main.ts  msgbus-preload.ts  msgbus-util.ts
src/main/recorder/: recorder-main.ts
src/main/store/: README.md  store-preload.ts  store.ts
src/main/util/: fileops-handler.ts  util-preload.ts
src/renderer/: App.tsx  index.ejs
src/renderer/components/: CanvasIcon.tsx  ErrorDialog.ts  FullSizeWindow.tsx  HamburgerMenu.tsx  InfoPopup.tsx  LoggerAlert.tsx  Markdown.tsx  NagScreen.tsx  RGBAImageCanvas.tsx  RetriggerableOneshot.tsx  SideNavMenu.tsx  StartButton.tsx  Toast.tsx  TopBar.tsx
src/renderer/doc/: CrewTimerVideoRecorder.md  CrewTimerVideoRecorderHelp.md  HelpMarkdown.md  PrivacyMarkdown.md  WhatsNew.md
src/renderer/msgbus/: MsgbusTypes.ts  msgbus.d.ts
src/renderer/pages/: HomePage.tsx  MainPage.tsx  RecordingLogTable.tsx
src/renderer/recorder/: CameraMonitor.tsx  FullScreenVideo.tsx  RecorderApi.ts  RecorderConfig.tsx  RecorderData.ts  RecorderTips.tsx  RecorderTypes.ts  RecordingStatus.tsx  ViscaTypes.ts
src/renderer/store/: StoreUtil.ts  UseElectronDatum.tsx
src/renderer/util/: ImageUtils.ts  UseFirebase.tsx  UseSettings.tsx  Util.ts  VideoSettings.ts  util.d.ts
src/renderer/visca/: RangeStepper.tsx  ViscaAPI.ts  ViscaControlPanel.tsx  ViscaPortSelector.tsx  ViscaPresets.tsx  ViscaState.ts  ViscaValueButton.tsx
